--- a/src/index.template.html
+++ b/src/index.template.html
@@ -20,7 +20,17 @@
   <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-auth.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163323643-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-163323643-1');
+
+  </script>
 </head>
 
 <body style="user-select: none;-moz-user-select: none;-webkit-user-select: none;" class="notranslate bg-surface">
